with google oauth

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body >
   <h1 >Toilet Buddy</h1>
   <div id="root"></div>
+  <a href='./google/auth'><button id="signin">Sign in with Google</button></a>
  <script async="false" src="build/bundle.js"></script>
 </body>
 </html>
