--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Toilet Buddy</title>
+  <link rel="stylesheet" href="./client/style/style.css">
 </head>
 <body >
-  <h1 >Toilet Buddy</h1>
+  <!-- <h1 >Toilet Buddy</h1> -->
   <div id="root"></div> 
  <script async="false" src="build/bundle.js"></script>
 </body>
